--- a/.gitmodules
+++ b/.gitmodules
@@ -10,7 +10,7 @@
 [submodule "sourcedata/raw"]
 	path = sourcedata/raw
 	url = https://github.com/OpenNeuroDatasets/ds004101.git
-	datalad-url = https://github.com/OpenNeuroDatasets/ds004101.git
+	datalad-url = /scratch1/03201/jbwexler/openneuro_derivatives/raw/ds004101
 [submodule "sourcedata/templateflow"]
 	path = sourcedata/templateflow
 	url = https://github.com/templateflow/templateflow.git
